# AWE

./: README.md  build.cmd
awe_app/: CMakeLists.txt
awe_app/awe_size/: CMakeLists.txt  awe_size.cpp
awe_app/awe_try/: CMakeLists.txt  awe_try.cpp  awe_try.h
awe_app/meminfo/: CMakeLists.txt  MemInfo.cpp  MemInfo.h
awe_app/meminfo/7/: CMakeLists.txt
awe_app/meminfo/8/: CMakeLists.txt
awe_app/size/: CMakeLists.txt  get_size.cpp
awe_app/size/awe/: CMakeLists.txt
awe_app/size/awe/7/: CMakeLists.txt
awe_app/size/awe/8/: CMakeLists.txt
awe_app/size/lp/: CMakeLists.txt
awe_app/size/lp/7/: CMakeLists.txt
awe_app/size/lp/8/: CMakeLists.txt
jar_test/: dbg.txt  run.cmd
jar_test/src/: AllocTest.java
script/: RamMap.ps1
